# nBody

./: README.md
parallel/: CMakeLists.txt  nbody.cu
serial/: CMakeLists.txt  nbody.cpp
